--- a/app/src/main/res/layout/activity_call_page.xml
+++ b/app/src/main/res/layout/activity_call_page.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#8E5E5E">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="#8E5E5E"
+    android:id="@+id/main"
+    tools:context=".call_page">
 
     <ImageView
         android:id="@+id/avatar"
@@ -14,7 +17,7 @@
         android:layout_centerInParent="true"
         android:clipToOutline="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/person1" />
+        android:src="@drawable/white_woman" />
 
 
     <TextView
@@ -51,7 +54,7 @@
         android:src="@drawable/list"
         app:tint="#FFFFFF" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/endCall"
         android:layout_width="64dp"
         android:layout_height="64dp"
