--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/root"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/white"
+    tools:context=".chat">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -147,7 +149,7 @@
             android:layout_height="44dp"
             android:layout_toStartOf="@id/stickersIcon"
             android:layout_centerVertical="true"
-            android:src="@drawable/Picture"
+            android:src="@drawable/picture"
             android:layout_marginRight="10dp"/>
 
         <ImageView
