--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root"
     android:layout_width="match_parent"
+    tools:context=".home_page"
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
@@ -59,7 +60,7 @@
             android:layout_centerVertical="true"
             android:layout_toLeftOf="@+id/dms"
             android:layout_marginEnd="16dp"
-            android:src="@drawable/Reels"
+            android:src="@drawable/reels"
             app:tint="@color/smd_theme">
 
         </ImageView>
@@ -108,22 +109,23 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/story_circle"
-                        app:tint="@color/smd_theme"
                         android:id="@+id/ring1"/>
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="32dp"
                         app:cardUseCompatPadding="false"
-                        app:cardPreventCornerOverlap="true">
+                        app:cardPreventCornerOverlap="true"
+                        >
 
                         <ImageView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
                             android:src="@drawable/person1"
+
                             android:id="@+id/pfp1"/>
                     </androidx.cardview.widget.CardView>
 
@@ -151,18 +153,18 @@
                 <FrameLayout
                     android:layout_width="74dp"
                     android:layout_height="72dp"
+                    android:id="@+id/story_clickable"
                     >
 
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/story_circle"
-                        app:tint="@color/smd_theme"
                         android:id="@+id/ring2"/>
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="32dp"
                         app:cardUseCompatPadding="false"
@@ -173,7 +175,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/karenne"
                             android:id="@+id/pfp2"/>
                     </androidx.cardview.widget.CardView>
 
@@ -184,7 +186,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:gravity="center"
-                    android:text="Story 2"
+                    android:text="Karennne"
                     android:textSize="12dp"
                     android:id="@+id/my_username2"/>
             </LinearLayout>
@@ -205,12 +207,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/story_circle"
-                        app:tint="@color/smd_theme"
                         android:id="@+id/ring3"/>
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="32dp"
                         app:cardUseCompatPadding="false"
@@ -220,7 +221,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/black_man"
                             android:id="@+id/pfp3"/>
                     </androidx.cardview.widget.CardView>
 
@@ -231,7 +232,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:gravity="center"
-                    android:text="Story 3"
+                    android:text="zackjohn"
                     android:textSize="12dp"
                     android:id="@+id/my_username3"/>
             </LinearLayout>
@@ -252,12 +253,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/story_circle"
-                        app:tint="@color/smd_theme"
                         android:id="@+id/ring4"/>
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="32dp"
                         app:cardUseCompatPadding="false"
@@ -267,7 +267,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/italian_man"
                             android:id="@+id/pfp4"/>
                     </androidx.cardview.widget.CardView>
 
@@ -278,7 +278,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:gravity="center"
-                    android:text="Story 4"
+                    android:text="kieron_d"
                     android:textSize="12dp"
                     android:id="@+id/my_username4"/>
             </LinearLayout>
@@ -299,12 +299,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/story_circle"
-                        app:tint="@color/smd_theme"
                         android:id="@+id/ring5"/>
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="32dp"
                         app:cardUseCompatPadding="false"
@@ -314,7 +313,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/person1"
+                            android:src="@drawable/white_woman"
                             android:id="@+id/pfp5"/>
                     </androidx.cardview.widget.CardView>
 
@@ -325,7 +324,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:gravity="center"
-                    android:text="Story 5"
+                    android:text="anna_m"
                     android:textSize="12dp"
                     android:id="@+id/my_username5"/>
             </LinearLayout>
@@ -346,12 +345,11 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:src="@drawable/story_circle"
-                        app:tint="@color/smd_theme"
                         android:id="@+id/ring6"/>
 
                     <androidx.cardview.widget.CardView
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
                         app:cardCornerRadius="32dp"
                         app:cardUseCompatPadding="false"
@@ -372,7 +370,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:gravity="center"
-                    android:text="Story 6"
+                    android:text="harry_s"
                     android:textSize="12dp"
                     android:id="@+id/my_username6"/>
             </LinearLayout>
@@ -415,15 +413,19 @@
                 android:paddingEnd="12dp"
                 android:gravity="center_vertical">
 
-                <TextView
+                <ImageView
                     android:id="@+id/p1Avatar"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:gravity="center"
-                    android:background="@drawable/oval"
+                    android:background="@drawable/circle_bg_pink"
+                    android:src="@drawable/black_man"
+                    android:clipToOutline="true"
+                    android:scaleType="centerCrop"
+
                     android:layout_centerVertical="true">
 
-                </TextView>
+                </ImageView>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -461,6 +463,20 @@
                     >
 
                 </ImageView>
+
+                <ImageView
+                    android:id="@+id/verifiedBadge"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentEnd="true"
+                    android:src="@drawable/verified"
+                    android:layout_marginRight="270dp"
+                    android:tint="@color/smd_theme"
+                    android:padding="3dp"
+
+                    tools:ignore="UseAppTint">
+
+                </ImageView>
             </RelativeLayout>
 
             <ImageView
@@ -486,10 +502,10 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/like"
                         android:layout_width="20dp"
                         android:layout_height="24dp"
-                        android:src="@drawable/like"
-                        android:id="@+id/like"/>
+                        android:src="@drawable/like" />
 
                     <ImageView
                         android:layout_width="24dp"
@@ -513,13 +529,32 @@
                     android:src="@drawable/save" />
             </RelativeLayout>
 
-            <TextView
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:text="Liked by craig_love and 44,686 others"
-                android:textStyle="bold"/>
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/oval"
+                    android:id="@+id/liked_by"
+                    android:layout_marginLeft="10dp"
+                    >
+
+                </ImageView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="12dp"
+                    android:text="Liked by craig_love and 44,686 others"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="25dp"/>
+
+            </RelativeLayout>
+
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -536,12 +571,15 @@
                 android:paddingEnd="12dp"
                 android:gravity="center_vertical">
 
-                <TextView
+                <ImageView
                     android:id="@+id/p2Avatar"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
                     android:gravity="center"
-                    android:background="@drawable/oval"
+                    android:background="@drawable/story_bg"
+                    android:src="@drawable/italian_man"
+                    android:clipToOutline="true"
+                    android:scaleType="centerCrop"
                     android:layout_centerVertical="true"/>
 
                 <LinearLayout
@@ -617,13 +655,30 @@
                     android:src="@drawable/save" />
             </RelativeLayout>
 
-            <TextView
+
+            <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:text="Liked by jenny and 1,203 others"
-                android:textStyle="bold"/>
+                >
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/oval"
+                    android:layout_marginLeft="10dp">
+
+                </ImageView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="12dp"
+                    android:paddingEnd="12dp"
+                    android:text="Liked by jenny and 1,203 others"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="25dp"/>
+
+
+            </RelativeLayout>
 
             <TextView
                 android:layout_width="match_parent"
