--- a/app/src/main/res/layout/activity_posting.xml
+++ b/app/src/main/res/layout/activity_posting.xml
@@ -3,7 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".posting"
+    android:background="@color/white"
+    android:id="@+id/main"
+    >
 
     <RelativeLayout
         android:id="@+id/topBar"
@@ -11,7 +15,8 @@
         android:layout_height="56dp"
         android:layout_alignParentTop="true"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp">
+        android:paddingEnd="16dp"
+        >
 
         <TextView
             android:id="@+id/cancel_btn"
@@ -117,7 +122,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginStart="8dp"
                     android:text="SELECT MULTIPLE"
-                    android:background="@drawable/circular_background"
+                    android:background="@drawable/message_bar"
                     android:drawableStart="@drawable/gallery"
                     android:paddingStart="15dp"
                     android:drawablePadding="10dp"
@@ -158,7 +163,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
+                    android:src="@drawable/black_man"/>
 
                 <ImageView
                     android:layout_width="0dp"
@@ -166,7 +171,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
+                    android:src="@drawable/italian_man"/>
 
                 <ImageView
                     android:layout_width="0dp"
@@ -174,7 +179,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
+                    android:src="@drawable/man_coffee"/>
 
                 <ImageView
                     android:layout_width="0dp"
@@ -182,7 +187,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
+                    android:src="@drawable/oval"/>
 
             </LinearLayout>
 
@@ -198,7 +203,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
+                    android:src="@drawable/karenne"/>
 
                 <ImageView
                     android:layout_width="0dp"
@@ -206,7 +211,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
+                    android:src="@drawable/white_woman"/>
 
                 <ImageView
                     android:layout_width="0dp"
@@ -214,7 +219,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/lake"/>
+                    android:src="@drawable/white_woman"/>
 
                 <ImageView
                     android:layout_width="0dp"
@@ -222,7 +227,7 @@
                     android:layout_weight="1"
                     android:layout_margin="1dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/person1"/>
+                    android:src="@drawable/karenne"/>
 
             </LinearLayout>
 
