--- a/app/src/main/res/layout/activity_search_feed.xml
+++ b/app/src/main/res/layout/activity_search_feed.xml
@@ -27,6 +27,7 @@
             android:layout_toLeftOf="@id/scan"
             android:layout_marginEnd="12dp"
             android:background="@drawable/acc_bar"
+            android:backgroundTint="#F2EDED"
             android:hint="Search"
             android:textColorHint="@color/smd_theme"
             android:paddingStart="12dp"
@@ -74,15 +75,18 @@
             android:paddingEnd="14dp"
             android:gravity="center"
             android:textColor="@color/smd_theme"
+            android:layout_marginLeft="8dp"
             android:text="Shop"
             android:textSize="12dp"
             android:fontFamily="@font/instagram_sans_bold"
             android:layout_weight="2"
+            android:background="@drawable/follow_button"
             android:drawableStart="@drawable/shopping_bag"
             android:drawableTint="@color/smd_theme"/>
 
         <TextView
             android:layout_width="wrap_content"
+            android:background="@drawable/follow_button"
             android:layout_height="32dp"
             android:layout_marginStart="8dp"
             android:layout_weight="2"
@@ -99,6 +103,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="32dp"
+            android:background="@drawable/follow_button"
             android:layout_marginStart="8dp"
             android:paddingStart="14dp"
             android:paddingEnd="14dp"
@@ -114,6 +119,7 @@
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:layout_marginStart="8dp"
+            android:background="@drawable/follow_button"
             android:paddingStart="14dp"
             android:paddingEnd="14dp"
             android:textColor="@color/smd_theme"
@@ -128,9 +134,11 @@
             android:layout_width="wrap_content"
             android:layout_height="32dp"
             android:layout_marginStart="8dp"
+            android:layout_marginRight="8dp"
             android:paddingStart="14dp"
             android:textColor="@color/smd_theme"
             android:paddingEnd="14dp"
+            android:background="@drawable/follow_button"
             android:gravity="center"
             android:text="Music"
             android:textSize="12dp"
@@ -141,171 +149,116 @@
         android:id="@+id/gridScroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_above="@+id/bottomBar"
         android:layout_below="@id/chips"
+        android:layout_above="@+id/bottomBar"
         android:fillViewport="true"
-        android:overScrollMode="never"
-        tools:ignore="SpeakableTextPresentCheck">
+        android:overScrollMode="never">
 
-        <LinearLayout
+        <androidx.gridlayout.widget.GridLayout
+            android:id="@+id/grid"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="1dp">
+            android:padding="1dp"
+            android:useDefaultMargins="true"
+            app:rowCount="4"
+            app:columnCount="3"
+            tools:ignore="GridLayout">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:weightSum="3">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/landscape"
+                app:layout_row="0"
+                app:layout_column="0"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="240dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/people"
+                app:layout_row="0"
+                app:layout_rowSpan="2"
+                app:layout_column="1"
+                app:layout_columnSpan="2"
+                app:layout_gravity="fill"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/man_coffee"
+                app:layout_row="1"
+                app:layout_column="0"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-            </LinearLayout>
+            <!-- Row 2 (three small tiles) -->
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/white_woman"
+                app:layout_row="2"
+                app:layout_column="0"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/karenne"
+                app:layout_row="2"
+                app:layout_column="1"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/italian_man"
+                app:layout_row="2"
+                app:layout_column="2"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/bird"
+                app:layout_row="3"
+                app:layout_column="0"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-            </LinearLayout>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/black_man"
+                app:layout_row="3"
+                app:layout_column="1"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/white_man"
+                app:layout_row="3"
+                app:layout_column="2"
+                app:layout_columnWeight="1"
+                app:layout_gravity="fill"/>
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
 
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="100dp"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="120dp"
-                    android:layout_margin="1dp"
-                    android:layout_weight="1"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/lake" />
-            </LinearLayout>
-
-        </LinearLayout>
+        </androidx.gridlayout.widget.GridLayout>
     </ScrollView>
 
     <RelativeLayout
@@ -330,7 +283,8 @@
                 android:layout_height="24dp"
                 android:layout_weight="1"
                 android:src="@drawable/home_un"
-                app:tint="@color/smd_theme" />
+                app:tint="@color/smd_theme"
+                android:id="@+id/home"/>
 
             <ImageView
                 android:layout_width="0dp"
@@ -344,20 +298,23 @@
                 android:layout_height="24dp"
                 android:layout_weight="1"
                 android:src="@drawable/create"
-                app:tint="@color/smd_theme" />
+                app:tint="@color/smd_theme"
+                android:id="@+id/create_account"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="24dp"
                 android:layout_weight="1"
                 android:src="@drawable/like"
-                app:tint="@color/smd_theme" />
+                app:tint="@color/smd_theme"
+                android:id="@+id/activity_page"/>
 
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="28dp"
                 android:layout_weight="1"
                 android:src="@drawable/oval"
+                android:id="@+id/profile"
                 />
         </LinearLayout>
     </RelativeLayout>
