--- a/app/src/main/res/layout/activity_view_profile2.xml
+++ b/app/src/main/res/layout/activity_view_profile2.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".view_profile"
-    android:background="@color/white">
+    tools:context=".view_profile_2"
+    android:background="@color/white"
+    android:id="@+id/main">
 
     <RelativeLayout
         android:id="@+id/topBar"
@@ -80,24 +81,27 @@
                 <FrameLayout
                     android:id="@+id/profileImage"
                     android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true">
+                    android:layout_height="80dp">
 
                     <ImageView
-                        android:id="@+id/image"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:src="@drawable/person1"
-                        android:scaleType="centerCrop"
-                        android:background="@drawable/circle_mask"
-                        android:clipToOutline="true"/>
+                        android:src="@drawable/story_circle" />
 
-                    <ImageView
-                        android:id="@+id/profileRing"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/story_circle"/>
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                        android:layout_gravity="center"
+                        app:cardCornerRadius="34dp"
+                        app:cardUseCompatPadding="false"
+                        app:cardPreventCornerOverlap="true">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/black_man" />
+                    </androidx.cardview.widget.CardView>
                 </FrameLayout>
 
 
@@ -406,14 +410,32 @@
                     android:gravity="center"
                     android:layout_marginEnd="16dp">
 
-                    <ImageView
-                        android:id="@+id/highlight1Icon"
+                    <FrameLayout
                         android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/person1"
-                        android:background="@drawable/highlight_circle"
-                        android:clipToOutline="true"
-                        android:scaleType="centerCrop" />
+                        android:layout_height="60dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/highlight_circle" />
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="52dp"
+                            android:layout_height="52dp"
+                            android:layout_gravity="center"
+                            android:layout_margin="4dp"
+                            app:cardCornerRadius="26dp"
+                            app:cardUseCompatPadding="false"
+                            app:cardPreventCornerOverlap="true">
+
+                            <ImageView
+                                android:id="@+id/highlight1Icon"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/man_coffee" />
+                        </androidx.cardview.widget.CardView>
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/highlight1Label"
@@ -423,9 +445,9 @@
                         android:textSize="12sp"
                         android:textColor="@color/black"
                         android:layout_marginTop="4dp" />
-
                 </LinearLayout>
 
+                <!-- Highlight 2 -->
                 <LinearLayout
                     android:id="@+id/highlight2"
                     android:layout_width="wrap_content"
@@ -434,14 +456,32 @@
                     android:gravity="center"
                     android:layout_marginEnd="16dp">
 
-                    <ImageView
-                        android:id="@+id/highlight2Icon"
+                    <FrameLayout
                         android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/person1"
-                        android:background="@drawable/highlight_circle"
-                        android:clipToOutline="true"
-                        android:scaleType="centerCrop" />
+                        android:layout_height="60dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/highlight_circle" />
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="52dp"
+                            android:layout_height="52dp"
+                            android:layout_gravity="center"
+                            android:layout_margin="4dp"
+                            app:cardCornerRadius="26dp"
+                            app:cardUseCompatPadding="false"
+                            app:cardPreventCornerOverlap="true">
+
+                            <ImageView
+                                android:id="@+id/highlight2Icon"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/bird" />
+                        </androidx.cardview.widget.CardView>
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/highlight2Label"
@@ -451,9 +491,9 @@
                         android:textSize="12sp"
                         android:textColor="@color/black"
                         android:layout_marginTop="4dp" />
-
                 </LinearLayout>
 
+                <!-- Highlight 3 -->
                 <LinearLayout
                     android:id="@+id/highlight3"
                     android:layout_width="wrap_content"
@@ -462,14 +502,32 @@
                     android:gravity="center"
                     android:layout_marginEnd="16dp">
 
-                    <ImageView
-                        android:id="@+id/highlight3Icon"
+                    <FrameLayout
                         android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/person1"
-                        android:background="@drawable/highlight_circle"
-                        android:clipToOutline="true"
-                        android:scaleType="centerCrop" />
+                        android:layout_height="60dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/highlight_circle" />
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="52dp"
+                            android:layout_height="52dp"
+                            android:layout_gravity="center"
+                            android:layout_margin="4dp"
+                            app:cardCornerRadius="26dp"
+                            app:cardUseCompatPadding="false"
+                            app:cardPreventCornerOverlap="true">
+
+                            <ImageView
+                                android:id="@+id/highlight3Icon"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/people" />
+                        </androidx.cardview.widget.CardView>
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/highlight3Label"
@@ -479,9 +537,9 @@
                         android:textSize="12sp"
                         android:textColor="@color/black"
                         android:layout_marginTop="4dp" />
-
                 </LinearLayout>
 
+                <!-- Highlight 4 -->
                 <LinearLayout
                     android:id="@+id/highlight4"
                     android:layout_width="wrap_content"
@@ -490,14 +548,32 @@
                     android:gravity="center"
                     android:layout_marginEnd="16dp">
 
-                    <ImageView
-                        android:id="@+id/highlight4Icon"
+                    <FrameLayout
                         android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/person1"
-                        android:background="@drawable/highlight_circle"
-                        android:clipToOutline="true"
-                        android:scaleType="centerCrop" />
+                        android:layout_height="60dp">
+
+                        <ImageView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/highlight_circle" />
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="52dp"
+                            android:layout_height="52dp"
+                            android:layout_gravity="center"
+                            android:layout_margin="4dp"
+                            app:cardCornerRadius="26dp"
+                            app:cardUseCompatPadding="false"
+                            app:cardPreventCornerOverlap="true">
+
+                            <ImageView
+                                android:id="@+id/highlight4Icon"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:scaleType="centerCrop"
+                                android:src="@drawable/italian_man" />
+                        </androidx.cardview.widget.CardView>
+                    </FrameLayout>
 
                     <TextView
                         android:id="@+id/highlight4Label"
@@ -507,9 +583,9 @@
                         android:textSize="12sp"
                         android:textColor="@color/black"
                         android:layout_marginTop="4dp" />
-
                 </LinearLayout>
 
+                <!-- New highlight (kept as simple icon, like your source) -->
                 <LinearLayout
                     android:id="@+id/newHighlight"
                     android:layout_width="wrap_content"
@@ -535,7 +611,6 @@
                         android:textSize="12sp"
                         android:textColor="@color/black"
                         android:layout_marginTop="4dp" />
-
                 </LinearLayout>
 
             </LinearLayout>
@@ -543,7 +618,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/light_gray" />
+                android:background="@color/gray" />
 
             <LinearLayout
                 android:id="@+id/tabsSection"
@@ -610,7 +685,7 @@
                         android:layout_height="120dp"
                         android:layout_weight="1"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/person1"
+                        android:src="@drawable/karenne"
                         android:layout_margin="1dp" />
 
                     <ImageView
@@ -626,7 +701,7 @@
                         android:layout_height="120dp"
                         android:layout_weight="1"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/person1"
+                        android:src="@drawable/city"
                         android:layout_margin="1dp" />
 
                 </LinearLayout>
@@ -642,7 +717,7 @@
                         android:layout_height="120dp"
                         android:layout_weight="1"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/lake"
+                        android:src="@drawable/landscape"
                         android:layout_margin="1dp" />
 
                     <ImageView
@@ -650,7 +725,7 @@
                         android:layout_height="120dp"
                         android:layout_weight="1"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/person1"
+                        android:src="@drawable/people"
                         android:layout_margin="1dp" />
 
                     <ImageView
@@ -658,7 +733,7 @@
                         android:layout_height="120dp"
                         android:layout_weight="1"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/lake"
+                        android:src="@drawable/bird"
                         android:layout_margin="1dp" />
 
                 </LinearLayout>
@@ -674,7 +749,7 @@
                         android:layout_height="120dp"
                         android:layout_weight="1"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/person1"
+                        android:src="@drawable/man_coffee"
                         android:layout_margin="1dp" />
 
                     <ImageView
@@ -682,7 +757,7 @@
                         android:layout_height="120dp"
                         android:layout_weight="1"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/lake"
+                        android:src="@drawable/people"
                         android:layout_margin="1dp" />
 
                     <ImageView
