--- a/app/src/main/res/layout/activity_you_page.xml
+++ b/app/src/main/res/layout/activity_you_page.xml
@@ -113,9 +113,10 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/person1"
+                    android:src="@drawable/white_man"
                     android:background="@drawable/circular_background"
                     android:clipToOutline="true"
+                    android:scaleType="centerCrop"
                     android:id="@+id/avatar_new_1"/>
 
                 <TextView
@@ -132,7 +133,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/lake"
+                    android:src="@drawable/city"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:id="@+id/image_new_1"/>
@@ -167,9 +168,10 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/person1"
+                    android:src="@drawable/italian_man"
                     android:background="@drawable/circular_background"
                     android:clipToOutline="true"
+                    android:scaleType="centerCrop"
                     android:id="@+id/avatar_today_1"/>
 
                 <TextView
@@ -186,7 +188,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/lake"
+                    android:src="@drawable/landscape"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:id="@+id/image_today_1"/>
@@ -221,9 +223,10 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/person1"
+                    android:src="@drawable/white_woman"
                     android:background="@drawable/circular_background"
                     android:clipToOutline="true"
+                    android:scaleType="centerCrop"
                     android:id="@+id/avatar_week_1"/>
 
                 <TextView
@@ -240,7 +243,7 @@
                 <ImageView
                     android:layout_width="60dp"
                     android:layout_height="60dp"
-                    android:src="@drawable/lake"
+                    android:src="@drawable/people"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:id="@+id/image_week_1"/>
@@ -283,9 +286,10 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/person1"
+                    android:src="@drawable/italian_man"
                     android:background="@drawable/circular_background"
                     android:clipToOutline="true"
+                    android:scaleType="centerCrop"
                     android:id="@+id/avatar_week_2"/>
 
                 <TextView
@@ -325,7 +329,8 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/person1"
+                    android:src="@drawable/black_man"
+                    android:scaleType="centerCrop"
                     android:background="@drawable/circular_background"
                     android:clipToOutline="true"
                     android:id="@+id/avatar_week_3"/>
@@ -347,7 +352,7 @@
                     android:text="Message"
                     android:textSize="14sp"
                     android:textColor="@color/black"
-                    android:background="@drawable/message_button_bg"
+                    android:background="@drawable/message_bttn"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:paddingTop="8dp"
@@ -369,6 +374,7 @@
                     android:layout_height="40dp"
                     android:src="@drawable/person1"
                     android:background="@drawable/circular_background"
+                    android:scaleType="centerCrop"
                     android:clipToOutline="true"
                     android:id="@+id/avatar_week_4"/>
 
@@ -429,8 +435,9 @@
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/person1"
+                    android:src="@drawable/white_man"
                     android:background="@drawable/circular_background"
+                    android:scaleType="centerCrop"
                     android:clipToOutline="true"
                     android:id="@+id/avatar_month_1"/>
 
